# content-ai

./: .env  .gitattributes  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  PHASE5_SUMMARY.md  QUEUE.md  README.md  TEST_RESULTS.md  captions.ass  copilot.md  docker-compose.yml  find_hype.py  find_hype_strict.py  init_db.py  make_reel.py  make_reel_legacy.py  pyproject.toml  requirements.txt  test_api.db  test_pipeline.db  test_queue.db-shm  test_queue.db-wal
.agent/skills/api-integration-expert/: SKILL.md
.github/workflows/: ci.yml
config/: default.yaml
content_ai/: cli.py  config.py  demo.py  detector.py  pipeline.py  renderer.py  scanner.py  segments.py
docs/: RENDERING.md
src/content_ai/: cli.py  config.py  demo.py  detector.py  ffmpeg_runner.py  mission_control.py  models.py  pipeline.py  presets.py  queued_pipeline.py  renderer.py  segments.py
src/content_ai/api/: main.py  (+1 more)
test_output/batch_20260111_214359/: batch_meta.json
test_output/batch_20260111_214509/: batch_meta.json
tests/: conftest.py  test_api_presets.py  test_cli.py  test_config.py  test_detector.py  test_ffmpeg_runner.py  test_models.py  test_presets.py  test_queue.py  test_renderer.py  test_scanner.py  test_segments.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: AIShell.tsx  BackgroundMarquee.tsx  manage-presets-drawer.tsx  preset-bar.tsx  save-preset-dialog.tsx  upload-zone.tsx
web/hooks/: use-presets.ts
web/lib/: preset-keys.ts  presets-api.ts
web/prisma/: schema.prisma
(+17 files in other folders)
